<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/buttonone"
        android:id="@+id/button1"
        android:icon="@drawable/text"
        />
    <item
        android:title="@string/bottontwo"
        android:id="@+id/button2"
        android:icon="@drawable/text"
        />
    <item
        android:title="@string/bottonthree"
        android:id="@+id/button3"
        android:icon="@drawable/text"
        />
    <item
        android:title="@string/bottontfour"
        android:id="@+id/button4"
        android:icon="@drawable/text"
        />
    <item
        android:title="@string/bottonfive"
        android:id="@+id/button5"
        android:icon="@drawable/text"
        />
    <item
        android:title="@string/bottonsix"
        android:id="@+id/button6"
        android:icon="@drawable/text"
        />
    <item
        android:title="@string/bottonseven"
        android:id="@+id/button7"
        android:icon="@drawable/text"
        />

</menu>